# pokemon-simulator-api

./: .gitattributes  Cargo.toml  Config.toml  Dockerfile  README.md  coverage.bat  docker-compose.yml
.github/workflows/: docker.yml  docs.yml  rust.yml
config/: config.toml.bak
coverage/: coverage.json  index.html
coverage/html/: coverage.json  index.html
coverage/html/src/: index.html  json.rs.html  main.rs.html
coverage/html/src/tests/: api.rs.html  index.html  json.rs.html  mod.rs.html
coverage/src/: index.html  json.rs.html  main.rs.html
coverage/src/tests/: api.rs.html  index.html  json.rs.html
src/: database.rs  fight.rs  json.rs  main.rs  pokemon.rs  trainer.rs
src/database/: delete.rs  get.rs  link.rs  mod.rs  promise.rs  put.rs  update.rs
src/fight/: endpoints.rs  mod.rs  pokemon_fight.rs  trainer_fight.rs
src/pokemon/: endpoints.rs  mod.rs  ptype.rs  stats.rs
src/tests/: api.rs  database.rs  json.rs  mod.rs  pokemon.rs  pokemon.rs.bak
src/trainer/: endpoints.rs  mod.rs
