[package]
name = "pokemon-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
erased-serde = "0.4.5"
log = "0.4.22"
neo4rs = "0.8.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = "1.42.0"
toml = "0.8.19"
